force-app/main/default/objects/fboost__B_MetricConfig__mdt/fboost__B_MetricConfig__mdt.object-meta.xml
<CustomObject>
    <description>Boost metrics configuration</description>
    <label>Boost Metric Config</label>
    <pluralLabel>Boost Metric Config</pluralLabel>
</CustomObject>