force-app/main/default/objects/fboost__B_MetricConfig__mdt/fields/fboost__CalculationInterval__c.field-meta.xml
<CustomField>
    <fullName>fboost__CalculationInterval__c</fullName>
    <defaultValue>&quot;30min&quot;</defaultValue>
    <description>Determines metric calculation interval.</description>
    <inlineHelpText>Determines metric calculation interval.</inlineHelpText>
    <label>Calculation Interval</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15min</fullName>
                <default>true</default>
                <label>15min</label>
            </value>
            <value>
                <fullName>30min</fullName>
            </value>
            <value>
                <fullName>60min</fullName>
            </value>
            <value>
                <fullName>2hour</fullName>
            </value>
            <value>
                <fullName>3hour</fullName>
            </value>
            <value>
                <fullName>4hour</fullName>
            </value>
            <value>
                <fullName>6hour</fullName>
            </value>
            <value>
                <fullName>8hour</fullName>
            </value>
            <value>
                <fullName>12hour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>