force-app/main/default/objects/fboost__B_MetricConfig__mdt/fields/fboost__EnableMeasurement__c.field-meta.xml
<CustomField>
    <fullName>fboost__EnableMeasurement__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables metric measurement</description>
    <inlineHelpText>Enables metric measurement</inlineHelpText>
    <label>Enable Measurement</label>
    <type>Checkbox</type>
</CustomField>