force-app/main/default/objects/fboost__B_MetricConfig__mdt/fields/fboost__ErrorThreshold__c.field-meta.xml
<CustomField>
    <fullName>fboost__ErrorThreshold__c</fullName>
    <defaultValue>0.99</defaultValue>
    <description>Warning threshold</description>
    <inlineHelpText>Warning threshold</inlineHelpText>
    <label>Error Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>