force-app/main/default/objects/fboost__B_MetricConfig__mdt/fields/fboost__GroupName__c.field-meta.xml
<CustomField>
    <fullName>fboost__GroupName__c</fullName>
    <description>Defines Metrics Group name, metrics with the same group name are calculated in a single measurement process.</description>
    <inlineHelpText>Defines Metrics Group name, metrics with the same group name are calculated in a single measurement process.</inlineHelpText>
    <label>Group Name</label>
    <length>70</length>
    <required>true</required>
    <type>Text</type>
</CustomField>