force-app/main/default/objects/fboost__B_MetricConfig__mdt/fields/fboost__Limit__c.field-meta.xml
<CustomField>
    <fullName>fboost__Limit__c</fullName>
    <label>Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>