force-app/main/default/objects/fboost__B_MetricConfig__mdt/fields/fboost__MetricAPIName__c.field-meta.xml
<CustomField>
    <fullName>fboost__MetricAPIName__c</fullName>
    <label>Metric API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>