force-app/main/default/objects/fboost__B_MetricConfig__mdt/fields/fboost__MetricsCalculatorClassName__c.field-meta.xml
<CustomField>
    <fullName>fboost__MetricsCalculatorClassName__c</fullName>
    <description>Class with implements Metrics.Calculator interface</description>
    <inlineHelpText>Class with implements Metrics.Calculator interface</inlineHelpText>
    <label>Metrics Calculator Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>