force-app/main/default/objects/fboost__B_MetricConfig__mdt/fields/fboost__WarningThreshold__c.field-meta.xml
<CustomField>
    <fullName>fboost__WarningThreshold__c</fullName>
    <defaultValue>0.9</defaultValue>
    <description>Warning Threshold</description>
    <inlineHelpText>Warning Threshold</inlineHelpText>
    <label>Warning Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>