force-app/main/default/objects/fboost__B_MetricConfig__mdt/listViews/fboost__All.listView-meta.xml
<ListView>
    <fullName>fboost__All</fullName>
    <columns>MasterLabel</columns>
    <columns>fboost__MetricAPIName__c</columns>
    <columns>fboost__EnableMeasurement__c</columns>
    <columns>fboost__GroupName__c</columns>
    <columns>fboost__MetricsCalculatorClassName__c</columns>
    <columns>fboost__CalculationInterval__c</columns>
    <columns>fboost__Limit__c</columns>
    <columns>fboost__WarningThreshold__c</columns>
    <columns>fboost__ErrorThreshold__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>